# rs-fastlib

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: de.rs  lib.rs  model.rs  ser.rs  text.rs
src/base/: decimal.rs  instruction.rs  message.rs  mod.rs  pmap.rs  types.rs  value.rs
src/common/: context.rs  definitions.rs  mod.rs
src/decoder/: context.rs  decoder.rs  mod.rs  reader.rs  state.rs
src/encoder/: encoder.rs  mod.rs  writer.rs
src/model/: decimal.rs  mod.rs  template.rs  value.rs
src/tests/: base.rs  base_serde.rs  mod.rs  model.rs  spec.rs  spec2.rs
src/tests/templates/: base.xml  spec.xml  spec2.xml
src/utils/: bytes.rs  decimal.rs  mod.rs  stacked.rs
tests/: cqg-serde.rs  cqg.rs  templates.xml
