[package]
name = "fastlib"
version = "0.3.3"
authors = ["Alexey McSakoff <mcsakoff@gmail.com>"]
categories = ["parser-implementations", "encoding"]
description = """
FAST (FIX Adapted for STreaming protocol) is a space and processing efficient encoding method
for message oriented data streams.
"""
edition = "2021"
keywords = ["fix", "fast", "protocol", "parser"]
license = "MIT"
repository = "https://github.com/mcsakoff/rs-fastlib"

[dependencies]
bytes = "1.9"
hashbrown = "0.15"
roxmltree = "0.20"
serde = { version = "1.0", optional = true }
thiserror = "2.0"

[dev-dependencies]
serde_derive = "1.0"
serde_bytes = "0.11"

[features]
default = ["serde"]
serde = [
    "dep:serde",
]
