[package]
name = "fastlib"
version = "0.3.5"
authors = ["Alexey McSakoff <mcsakoff@gmail.com>"]
categories = ["parser-implementations", "encoding"]
description = """
FAST (FIX Adapted for STreaming protocol) is a space and processing efficient encoding method
for message oriented data streams.
"""
edition = "2024"
keywords = ["fix", "fast", "protocol", "parser"]
license = "MIT"
repository = "https://github.com/mcsakoff/rs-fastlib"

[dependencies]
bytes = "1"
hashbrown = "0.16"
roxmltree = "0.21"
serde = { version = "1.0", optional = true }
thiserror = "2"

[dev-dependencies]
serde_derive = "1.0"
serde_bytes = "0.11"

[features]
default = ["serde"]
serde = [
    "dep:serde",
]
