[package]
name = "fastlib"
version = "0.3.5"
authors = ["Alexey McSakoff <mcsakoff@gmail.com>"]
categories = ["parser-implementations", "encoding"]
description = """
FAST (FIX Adapted for STreaming protocol) is a space and processing efficient encoding method
for message oriented data streams.
"""
edition = "2024"
keywords = ["fix", "fast", "protocol", "parser"]
license = "MIT"
repository = "https://github.com/mcsakoff/rs-fastlib"
rust-version = "1.88.0"

[dependencies]
bytes = "1.11.1"
hashbrown = "0.16.1"
roxmltree = "0.21.1"
serde = { version = "1.0.228", optional = true }
thiserror = "2.0.18"

[dev-dependencies]
serde_derive = "1.0.228"
serde_bytes = "0.11.19"

[features]
default = ["serde"]
serde = [
    "dep:serde",
]
